# catvehicle_challenge

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/meister/: DetectionGrid.h  LaserDataProcessor.h  LidarFilter.h  MeisterCommon.h  NodeController.h  ObstacleDetector.h  RosCommunications.h  SDFModel.h  StateUpdate.h  VehicleStatusMonitor.h  WorldBuilder.h
launch/: meister.launch  meister_only.launch  run_all_tests.test  verification.test  verify_laser_data.test  verify_lidar_filter.test  verify_obstacle_detector.test  verify_state_update.test  verify_vehicle_status_monitor.test
matlab/: plot_detections.m  plot_obstacle_detector_data.m  plot_point_cloud.m  stamp2double.m
src/: DetectionGrid.cpp  LaserDataNode.cpp  LaserDataProcessor.cpp  LidarFilter.cpp  LidarFilterNode.cpp  NodeController.cpp  ObstacleDetector.cpp  ObstacleDetectorNode.cpp  StateUpdate.cpp  StateUpdateNode.cpp  VehicleStatusMonitor.cpp  VehicleStatusMonitorNode.cpp  WorldBuilder.cpp
test/: DetectionGridTests.cpp  LaserDataNodeTest.cpp  LidarFilterNodeTest.cpp  ObstacleDetectorNodeTest.cpp  SDFModelTest.cpp  StateUpdateNodeTest.cpp  SystemIntegrationTest.cpp  VehicleStatusMonitorNodeTest.cpp
worlds/: empty.world  world1.world
